correction d'une faute de frappe

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="row">
             <h2>Karim Benzema futur disque d'or ?</h2>
             <img width="200" height="200" src="https://i.ytimg.com/vi/iZBzBo-IRV4/hqdefault.jpg" alt="Karim Benzema">
-            <div>C'est officiel Karim Benzema va se reconvertir dans la musique, il pense créer un duo avec son collège et ami Mathieu Valbuena.</div>
+            <div>C'est officiel Karim Benzema va se reconvertir dans la musique, il pense créer un duo avec son collègue et ami Mathieu Valbuena.</div>
         </div>
     </div>
 </body>
